--- a/bai-tap/index.html
+++ b/bai-tap/index.html
@@ -58,7 +58,7 @@
     }
 
     .bg-text {
-      background-color: blue;
+      background-color: greenyellow;
       color: white;
     }
 
@@ -82,7 +82,7 @@
     <!-- bai-1 -->
     <!-- bai-2 -->
 
-    <div class="bai-2">
+    <div class="bai-2" style="margin: 50px">
       <input type="text" id="email" />
       <input type="text" id="pass" />
       <button id="disabled-pass">Disabled Pass</button>
@@ -91,7 +91,7 @@
     <!-- bai-2 -->
     <!-- bai-3 -->
 
-    <div class="bai-3" style="width: 25%; margin: 0 auto">
+    <div class="bai-3" style="width: 25%; margin: 0 auto; margin: 50px">
       <h1>Đăng Nhập</h1>
       <span>Tài Khoản: <input type="text" id="tai-khoan" /></span>
       <span>Mật Khẩu: <input type="password" id="mat-khau" /></span>
