--- a/bai-tap(18-09)/index.html
+++ b/bai-tap(18-09)/index.html
@@ -16,41 +16,41 @@
   <body>
     <div class="baiTap">
       <ul class="listBaiTap">
-        <li class="bai">
+        <li class="bai baiSo1">
           <i class="fa fa-book closeBook"></i
           ><i class="fab fa-leanpub openBook"></i><span>Bài 1</span>
         </li>
-        <li class="bai">
+        <li class="bai baiSo2">
           <i class="fa fa-book closeBook"></i
           ><i class="fab fa-leanpub openBook"></i><span>Bài 2</span>
         </li>
-        <li class="bai">
+        <li class="bai baiSo3">
           <i class="fa fa-book closeBook"></i
           ><i class="fab fa-leanpub openBook"></i><span>Bài 3</span>
         </li>
-        <li class="bai">
+        <li class="bai baiSo4">
           <i class="fa fa-book closeBook"></i
           ><i class="fab fa-leanpub openBook"></i><span>Bài 4</span>
         </li>
-        <li class="bai">
+        <li class="bai baiSo5">
           <i class="fa fa-book closeBook"></i
           ><i class="fab fa-leanpub openBook"></i><span>Bài 5</span>
         </li>
-        <li class="bai">
+        <li class="bai baiSo6">
           <i class="fa fa-book closeBook"></i
           ><i class="fab fa-leanpub openBook"></i><span>Bài 6</span>
         </li>
-        <li class="bai">
+        <li class="bai baiSo7">
           <i class="fa fa-book closeBook"></i
           ><i class="fab fa-leanpub openBook"></i><span>Bài 7</span>
         </li>
-        <li class="bai">
+        <li class="bai baiSo8">
           <i class="fa fa-book closeBook"></i
           ><i class="fab fa-leanpub openBook"></i><span>Bài 8</span>
         </li>
       </ul>
       <div class="QABaiTap">
-        <div class="bai1 baiSo">
+        <!-- <div class="bai1 baiSo">
           <div class="tieuDe">
             <i class="fa fa-calculator"></i>
             <h1>Xuất 3 số theo thứ tự tăng dần</h1>
@@ -76,15 +76,116 @@
             </div>
           </div>
           <div class="nhapVao">
+            <input type="number" placeholder="Nhập số thứ nhất" id="so11" />
+            <input type="number" placeholder="Nhập số thứ hai" id="so12" />
+            <input type="number" placeholder="Nhập số thứ ba" id="so13" />
+          </div>
+          <a class="tinh">Sắp xếp</a>
+          <output class="ketQua">&#128073;</output>
+        </div>
+        <div class="bai2 baiSo dNone">
+          <div class="tieuDe">
+            <i class="fa fa-calculator"></i>
+            <h1>Chương trình "Chào hỏi"</h1>
+          </div>
+          <div class="goiY">
+            <span
+              ><i class="fa fa-lightbulb"></i>Gợi ý: <br />
+              Nên tạo một dropdown để người dùng chọn thành viên cần gửi lời
+              chào. Cách này sẽ hạn chế người dùng nhập sai nội dung. Mỗi thẻ
+              option nên thêm value để dễ xử lý data sau khi lấy từ form. Nên sử
+              dụng câu điều kiện if...else if... else. Hoặc dùng switch
+              case</span
+            >
+            <div class="cach1">
+              <i class="fa fa-caret-right"></i>
+              <span class="imgGoiY">Dropdown HTML (mở rộng để xem thêm)</span>
+              <img src="./hinhAnh/3.png" alt="" />
+            </div>
+          </div>
+          <div class="nhapVao">
+            <input type="text" placeholder="Chọn thành viên"  />
+          </div>
+          <a class="tinh">Gửi lời chào</a>
+          <output class="ketQua">&#128073;</output>
+        </div> -->
+        <!-- <div class="bai3 baiSo">
+          <div class="tieuDe">
+            <i class="fa fa-calculator"></i>
+            <h1>Đếm số chẵn lẻ</h1>
+          </div>
+          <div class="goiY">
+            <span
+              ><i class="fa fa-lightbulb"></i>Gợi ý: <br />
+              Để kiểm tra 1 số là chẵn hay lẻ thì ta đem số đó chia với 2. Nếu
+              chia hết thì là số chẵn, ngược lại là số lẻ. (dùng toán tử %) Tạo
+              biến để chứa giá trị khi đếm. Sau khi xác định được số đó chẵn
+              hoặc lẻ thì tăng biến này lên 1 đơn vị (dùng các toán tử tăng:
+              count++, count+=1 ) 🤔TIP: Chỉ cần đếm các số chẵn. Để xác định số
+              lượng số lẻ ta chỉ cần lấy 3 trừ đi số lượng số chẵn đếm được (do
+              chỉ nhập 3 số nguyên)</span
+            >
+          </div>
+          <div class="nhapVao">
+            <input type="number" placeholder="Nhập số thứ nhất" id="so31" />
+            <input type="number" placeholder="Nhập số thứ hai" id="so32" />
+            <input type="number" placeholder="Nhập số thứ ba" id="so33" />
+          </div>
+          <span
+            class="dem"
+            style="
+              padding: 10px;
+              background-color: antiquewhite;
+              margin: 15px;
+              display: inline-block;
+              border-radius: 5px;
+            "
+            >Đếm</span
+          >
+          <output class="ketQua">&#128073;</output>
+        </div> -->
+        <!-- <div class="bai4 baiSo">
+          <div class="tieuDe">
+            <i class="fa fa-calculator"></i>
+            <h1>Đoán hình tam giác</h1>
+          </div>
+          <div class="goiY">
+            <span
+              ><i class="fa fa-lightbulb"></i>Gợi ý: <br />
+              Note: Chỉ cần xác định các loại tam giác cơ bản (vuông, đều, cân),
+              các tam giác còn lại xếp loại là tam giác khác
+            </span>
+          </div>
+          <div class="nhapVao">
             <input
               type="number"
-              placeholder="Nhập số thứ nhất"
-              inputmode="none"
+              placeholder="Nhập độ dài cạnh thứ nhất"
+              id="so41"
             />
-            <input type="number" placeholder="Nhập số thứ hai" />
-            <input type="number" placeholder="Nhập số thứ ba" />
+            <input
+              type="number"
+              placeholder="Nhập độ dài cạnh thứ hai"
+              id="so42"
+            />
+            <input
+              type="number"
+              placeholder="Nhập độ dài cạnh thứ ba"
+              id="so43"
+            />
           </div>
-        </div>
+          <span
+            class="doan"
+            style="
+              padding: 10px;
+              background-color: antiquewhite;
+              margin: 15px;
+              display: inline-block;
+              border-radius: 5px;
+            "
+            >Dự đoán</span
+          >
+          <output class="ketQua4">&#128073;</output>
+        </div> -->
       </div>
     </div>
     <script src="./main.js"></script>
